# Research-Matching-Crew

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.ebextensions/: nginx.config  python.config
.streamlit/: secrets.toml
db/: chroma.sqlite3
research_matching/: .gitignore  README.md  pyproject.toml
research_matching/db/: chroma.sqlite3
research_matching/src/research_matching/: crew.py  main.py
research_matching/src/research_matching/config/: agents.yaml  tasks.yaml
research_matching/src/research_matching/streamlit_app/: app.py
research_matching/src/research_matching/streamlit_app/db/: chroma.sqlite3
