[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research_matching"
version = "0.1.0"
description = "Research Matching Tool using CrewAI"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "crewai",
    "crewai-tools",
    "openai",
]

[project.scripts]
research_matching = "research_matching.main:run"
run_crew = "research_matching.main:run"
train = "research_matching.main:train"
replay = "research_matching.main:replay"
test = "research_matching.main:test"

[tool.crewai]
type = "crew"
