[project]
name = "research_matching"
version = "0.1.0"
description = "research-matching using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit",
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
research_matching = "research_matching.main:run"
run_crew = "research_matching.main:run"
train = "research_matching.main:train"
replay = "research_matching.main:replay"
test = "research_matching.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
